# Crypto_Profit_Calculator

./: .gitignore  README.md  generate-icns.js  generate-ico.js  generate-ico.py  generate-icons.js  index.html  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
